# HaqqSharmaCaptsone

./: 2-Design (Theoretical).ipynb  2-Design.ipynb  Clifford.ipynb  Haar (Theoretical).ipynb  Haar.ipynb  Pooled Pauli (Theoretical).ipynb  Pooled Pauli Pre-Selection (Theoretical).ipynb  Pooled Pauli Pre-Selection.ipynb  Pooled Pauli.ipynb  index.html  indexold.html  pyproject.toml  pythonwebserviceproofofconcept.py  two_design_theoretical.py
.ipynb_checkpoints/: captstonewebsiteprototype-checkpoint.py  pythonwebserviceproofofconcept-checkpoint.py
app/: captstonewebsiteprototype.py  haar.py  haar_theoretical.py
app/static/: Pooled Pauli (Theoretical).py  Pooled Pauli Pre Selection.py  clifford_theoretical.py  haar_theoretical.py  two_design.py  two_design_theoretical.py
app/templates/: Pooled Pauli.py  aboutTemplate.HTML  algorithmTemplate.html  clifford.html  haar.html  pooledpauli.html  testingTemplate.html  twodesign.html
clifford/: clifford.py  clifford_theoretical.py  theoretical_clifford.csv
data/qdrift_experimental/Cubed Samples - 2 Qubits (Dry run)/: cubed_samples_2_qubits_qdrift_experimental_initial_data.csv  cubed_samples_2_qubits_qdrift_experimental_sim_data.csv
data/qdrift_experimental/Full Gradient - 2 Qubits (Dry run)/: full_gradient_2_qubits_qdrift_experimental_initial_data.csv  full_gradient_2_qubits_qdrift_experimental_sim_data.csv
haar/: theoretical_haar.csv
qdrift/: qdrift_experimental.py
qdrift_experimental/: main.py
utils/: __init__.py  data_utils.py  operator_utils.py
(+2 files in other folders)
