[tool.poetry]
name = "haqqsharmacaptsone"
version = "0.1.0"
description = "CSE Capstone Project Fall/Spring 2024"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
        {include = "qdrift_experimental"},
        {include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^1.0.0"
qiskit-algorithms = "^0.3.0"
qiskit-ibm-runtime = "^0.20.0"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
joblib = "^1.3.2"
pyarrow = "^15.0.0"
flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
